# ELNER-Excel-Reports-Automation

./: .gitignore  CLAUDE.md  README.md  constructor.py  main.py  parser.py  plan.md  prd.md  processor.py  pyproject.toml  run.py  todo.md  ui.py
.github/workflows/: build-app.yml  github-actions-demo.yml
tests/: conftest.py  test_agent_validator.py  test_deterministic.py  test_integration.py
